--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; /* -------------------------------------------------- */
 }
 
 body
@@ -25,8 +25,8 @@ a {
   text-decoration: none;
 }
 
-h1 {
-  margin-block-start: 60px;
+h1 { /* -------------------------------------------------- */
+  margin-block-start: 60px; 
   margin-block-end: 5px;
   font-size: 3.6rem;
 }
@@ -53,11 +53,11 @@ p {
   font-size: 1.6rem;
   margin-block-end: 0px;
   margin-block-start: 2px;
-}
+} /* -------------------------------------------------- */
 
 ul {
   list-style-type: none;
-  padding-inline-start: 0px;
+  padding-inline-start: 0px; /* -------------------------------------------------- */
 }
 
 nav a {
@@ -91,12 +91,13 @@ a.logo {
 .logo-container {
   width: 127px;
   height: 92px;
-  overflow: hidden;
+  overflow: hidden; /* -------------------------------------------------- */
 }
 
 header img {
   max-width: 200%;
   object-fit: none;
+  /* border: 1px red solid; */
 }
 
 header nav ul {
@@ -138,7 +139,7 @@ header nav a:hover {
 
 label {
   position: absolute;
-  left: -999px;
+  left: -999px; /* -------------------------------------------------- */
 }
 
 input {
@@ -286,7 +287,7 @@ button div {
   gap: 20px;
 }
 
-#hebergement article > a {
+#hebergement article > a { /* -------------------------------------------------- */
   width: 100%;
   height: 100%;
   padding: 5px 5px 10px 5px;
@@ -302,7 +303,7 @@ button div {
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: nowrap;
-  flex: 1 1 auto;
+  flex: 1 1 auto; /* -------------------------------------------------- */
 }
 
 #hebergement .card-image {
@@ -458,11 +459,13 @@ button div {
   flex-direction: column;
   align-content: space-between;
   gap: 20px;
+  /* row-gap: 22px;
+  column-gap: 20px; */
 }
 
 #activite article {
   height: 100px;
-  width: 23%;
+  width: 23%; /* -------------------------------------------------- */
   background-color: white;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
@@ -501,7 +504,7 @@ button div {
 }
 
 #activite article:nth-child(3n + 1) {
-  width: 23%;
+  width: 23%; /* -------------------------------------------------- */
   height: 100%;
 }
 
@@ -588,13 +591,13 @@ footer a {
     font-size: 1.5rem;
   }
 
-  #hebergement h3 {
+  #hebergement h3 { /* -------------------------------------------------- */
     white-space: normal;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
-    overflow: hidden;
+    overflow: hidden; /* -------------------------------------------------- */
   }
 
   #hebpop p {
@@ -867,7 +870,7 @@ footer a {
     font-size: 2rem;
   }
 
-  .nopadding
+  .nopadding /* -------------------------------------------------- */
   {
     max-width: auto;
     margin: 0;
